k8s/ci/jenkins-ci.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 name: jenkins-ci
spec:
 replicas: 1
 template:
  metadata:
   labels:
    name: jenkins-ci
  spec:
   containers:
   - name: jenkins-ci
     imagePullPolicy: Always
     image: ${REGISTRY}/jenkins:${TAG}
     ports:
     - containerPort: 8080
     - containerPort: 50000
     readinessProbe:
      tcpSocket:
        port: 8080
      initialDelaySeconds: 40
      periodSeconds: 20
     securityContext: 
       privileged: true 
     volumeMounts: 
       - mountPath: /var/run
         name: docker-sock 
       - mountPath: /var/jenkins_home
         name: jenkins-home 
   volumes: 
     - name: docker-sock
       hostPath: 
         path: /var/run
     - name: jenkins-home
       hostPath: 
         path: /var/jenkins_home
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-ci
spec:
 type: NodePort
 ports:
   - name: jenkins
     port: 8080
     targetPort: 8080
   - name: jenkins-agent
     port: 50000
     targetPort: 50000
 selector:
   name: jenkins-ci
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: jenkins-ci
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: quiz.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /jenkins
        backend:
          serviceName: jenkins-ci 
          servicePort: 8080
  - host: quiz-ci.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-ci 
          servicePort: 8080
